--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -53,8 +52,7 @@
 				Once upon a time, Susan was an oil painter. Then she fell in love with technology and the people who built it during her time at <a href="http://cmu.edu"><i class="icon-graduation-cap"></i>Carnegie Mellon</a>
 			</p>
 			<p>
-				She’s currently at <a href="#trulia"><i class="icon-monitor"></i>Trulia</a> as a Visual UX Designer. <br/>
-				And spends her nights working on <a href="#sociallist"><i class="icon-monitor"></i>Sociallist</a> or <a href="#pocketcard"><i class="icon-mobile"></i>Pocket Card</a>
+				She’s currently at <a href="#trulia"><i class="icon-monitor"></i>Trulia</a> as a Senior Visual UX Designer. <br/>
 			</p>
 			<p>
 				Say hi <a href="http://twitter.com/bysusanlin"> <i class="icon-twitter"></i>@bysusanlin</a>
@@ -65,19 +63,6 @@
 		<a name="trulia">
 		<div class="piece" style="padding-top:0;">  </a>
 
-			<!--
-			<p>
-				<b> Search Results Cards. </b> Complicated business needs, meet usability. While you'd never see all permutations on the same results page, <a href="">much iteration <i class="icon-popup"></i></a> was done to get the deceivingly simple looking grid layout to work.
-			</p>
-
-			<p>
-				<b> OOCSS Dogfood. </b> The Search Results Page was the first Trulia.com page fully implemented with our internal Bootstrap-like <a href="">OOCSS<i class="icon-popup"></i></a> library. Further iteration occurred right in the code. I'm currently the design lead on the library team.
-			</p>			
-
-			<p>
-				<b> A New Wave. </b> The List view of the Search Results Page received <a href="">wonderful reception<i class="icon-popup"></i></a> in addition to performing very well. As a result, Trulia will be ushering in a refresh the older Map view and the addition of a Photo view. 
-			</p> -->
-
 			<div class="work">
 				<img src="images/trulia.png" />
 			</div>
@@ -87,41 +72,6 @@
 			</p>
 			<p class="button">
 				<a href="http://trulia.com/CA/San_Francisco" class="btn">Live on Trulia &rarr;</a>
-			</p>
-
-		</div> <!-- //piece -->
-
-		<a name="sociallist">
-		<div class="piece"> </a>
-
-			<div class="work">
-				<img src="images/sociallist.png" />
-			</div>
-
-			<p>
-				Collaboration with <a href="http://twitter.com/johncch"><i class="icon-twitter"></i>@johncch</a>  
-				&nbsp; Sociallist is the oldest side project and one of multiple iterations. It was inspired by the lack of powerfulness in most note taking and todo application services.
-			</p>
-
-			<p class="button">
-				<a href="http://sociallist.me/" class="btn">Live on Sociallist &rarr;</a>
-			</p>
-
-		</div> <!-- //piece -->		
-
-		<a name="pocketcard">
-		<div class="piece"> </a>
-
-			<div class="work">
-				<img src="images/pocketcard.png" />
-			</div>
-
-			<p>
-				Collaboration with <a href="http://twitter.com/johncch"><i class="icon-twitter"></i>@johncch</a>  
-				&nbsp; After a weekend of reading <a href="http://developer.android.com/design/index.html">Android design documentation<i class="icon-popup"></i></a> I became enamored with the thoughtfulness of the system. Prior to this, the idea of a librarian app for those with too many books came up.
-			</p>
-			<p class="button">
-				<a href="http://dribbble.com/bysusanlin/projects/110596-Pocket-Card" class="btn">More of Pocket Card &rarr;</a>
 			</p>
 
 		</div> <!-- //piece -->
