making more one-off edits as I marvel at inline editing
:rainbow:

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				Once upon a time, Susan was an oil painter. Then she fell in love with technology and the people who built it during her time at <a href="http://cmu.edu"><i class="icon-graduation-cap"></i>Carnegie Mellon</a>
 			</p>
 			<p>
-				She’s currently at <a href="#trulia"><i class="icon-monitor"></i>Trulia</a> as a Senior Visual UX Designer. <br/>
+				She’s currently at <a href="#trulia"><i class="icon-location"></i>Trulia</a> as a Senior Visual UX Designer. <br/>
 			</p>
 			<p>
 				Say hi <a href="http://twitter.com/bysusanlin"> <i class="icon-twitter"></i>@bysusanlin</a>
