oops, forgot to update this

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="Susan Lin, Susan L., Susan, bysusanlin, @bysusanlin">
 
 	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/screen.css">
 	<link rel="stylesheet" href="css/entypo-codes.css">
 	<link rel="stylesheet" href="css/entypo-embedded.css">
 	<link rel="stylesheet" href="css/entypo-ie7-codes.css">
