--- a/index.html
+++ b/index.html
@@ -13,12 +13,51 @@
 	<link rel="stylesheet" href="css/entypo-ie7-codes.css">
 	<link rel="stylesheet" href="css/entypo-ie7.css">
 	<link rel="stylesheet" href="css/entypo.css">
-	
+
+	<script type="text/javascript" src="js/jquery-1.8.3.min.js"> </script>
+ 	
 	<link rel="SHORTCUT ICON" href="favicon.ico">
 
-	<title>design by susan</title>
+	<title>bysusanlin &#10084;</title>
 
 	<meta name="p:domain_verify" content="766c1df40cfdc1ba812d5b2668f45ede"/>
+
+	<script type="text/javascript">
+	$(document).ready(function() {  
+		var stickyNavTop = $('#subnav').offset().top;  
+
+		var stickyNav = function(){  
+			var scrollTop = $(window).scrollTop();  
+
+			if (scrollTop > stickyNavTop) {   
+				$('#subnav').addClass('sticky');  
+			} else {  
+				$('#subnav').removeClass('sticky');   
+			}  
+		};  
+
+		stickyNav();  
+
+		$(window).scroll(function() {  
+			stickyNav();  
+		});  
+	});  
+	</script>
+
+	<script type="text/javascript">
+	$(document).ready(function() {
+
+		// Show or hide the sticky footer button
+		$(window).scroll(function() {
+			if ($(this).scrollTop() > 200) {
+				$('.go-top').fadeIn(500);
+			} else {
+				$('.go-top').fadeOut(500);
+			}
+		});
+
+	});
+	</script>
 
 	<script type="text/javascript">
 		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
@@ -35,36 +74,33 @@
 
 <body>
 
-	<div id="blog"> 
-		<a href="http://sketch.bysusanlin.com" alt="Blogs are more fun anyway!"> sketch by susan &rarr; </a> 
-	</div>
+	<a name="top"></a>
 
 	<header> <!-- masthead --> </header>
 
+	<div id="subnav" class="">
+		<ul>
+			<li class="typeLowlight"> bysusanlin </li>
+			<li> <a href="#design">design</a> </li>
+			<li> <a href="#talks">talks</a> </li>
+			<li> <a href="#sketches">sketches</a> </li>
+			<li> <a href="#bonus">bonus</a> </li>
+			<li> <a href="#contact">contact</a> </li>
+			<li> <a href="#top" class="go-top">&uarr;</a> </li>
+		</ul>
+	</div>
+
 	<div id="content">
-		
-		<section>
-		
-			<h2> bysusanlin <span class="h6 typeLowlight"> <i class="icon-location"></i>San Francisco</span> </h2>
-			<h3> Designerd, illustrator, & pretend developer </h3>
 
-			<p>
-				Once upon a time, Susan was an oil painter. Then she fell in love with technology and the people who built it during her time at <a href="http://cmu.edu"><i class="icon-graduation-cap"></i>Carnegie Mellon</a>
-			</p>
-			<p>
-				She’s currently at <a href="#trulia"><i class="icon-location"></i>Trulia</a> as a Senior Visual UX Designer. <br/>
-			</p>
-			<p>
-				Say hi <a href="http://twitter.com/bysusanlin"> <i class="icon-twitter"></i>@bysusanlin</a>
-			</p>
+		<a name="design"></a>
+		<div class="piece">
 
-		</section>
-
-		<a name="trulia">
-		<div class="piece" style="padding-top:0;">  </a>
+			<h6> Design / Trulia </h6> 
 
 			<div class="work">
-				<img src="images/trulia.png" />
+				<img src="images/trulia-search-list.png" />
+				<img src="images/trulia-search-photo.png" />
+				<img src="images/trulia-oocss-txl.png" />
 			</div>
 
 			<p>
@@ -76,11 +112,73 @@
 
 		</div> <!-- //piece -->
 
+		<a name="talks"> </a>
+		<div class="piece">
+
+			<h6> Talks / Speaking the Code </h6>
+			
+			<iframe width="700" height="525" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
+
+			<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js"></script>
+
+			<p>
+				 Designers venture into the world of Engineering. I spoke about the value of having a component library and the design process where it touches implementation, seeing your gorgeous mocks through the final 10% to shipping. This 15 minute deck was made for <a href="http://ixdasf.ning.com">IxDA SF<i class="icon-popup"></i></a> on a night of <a href="ixdasf.ning.com/events/designdoing">Design Doing<i class="icon-popup"></i></a>
+				 
+				 <br/>
+				 Previously, I've spoken privately for a visual design studio class and on a <a href="http://sketch.bysusanlin.com/post/45977847470/speaking-with-the-cmu-bxa-panel">Carnegie Mellon BXA alumni panel<i class="icon-popup"></i></a>
+			</p>
+
+			<p class="button">
+				<a href="#contact" class="btn">Contact for Talk Requests &darr;</a>
+			</p>
+
+		</div> <!-- //piece -->
+
 		<section>
 
+			<img src="images/bysusanlin-portrait.png"/>
+		
+			<h2> bysusanlin <span class="h5 typeLowlight"> <i class="icon-location"></i>San Francisco</span> </h2>
+			<h3> Designerd, illustrator, & pretend developer </h3>
+
+			<p>
+				Once upon a time, Susan was an oil painter. Then she fell in love with technology and the people who built it during her time at <a href="http://cmu.edu"><i class="icon-graduation-cap"></i>Carnegie Mellon</a>
+			</p>
+			<p>
+				She’s currently Senior Visual UX Designer at <a href="#design"> <i class="icon-monitor"></i>Trulia</a>
+			</p>
+			<p>
+				Her hair was last seen as turquoise-one-streak-pink.
+			</p>
+
+		</section>
+
+		<a name="contact"></a>
+		<section>
 			<ul>
-				<li class="typeLowlight">
-					Find me!
+				<li>
+					<script type="text/javascript">
+						//<![CDATA[
+						<!--
+						var x="function f(x){var i,o=\"\",l=x.length;for(i=0;i<l;i+=2) {if(i+1<l)o+=" +
+						"x.charAt(i+1);try{o+=x.charAt(i);}catch(e){}}return o;}f(\"ufcnitnof x({)av" +
+						" r,i=o\\\"\\\"o,=l.xelgnhtl,o=;lhwli(e.xhcraoCedtAl(1/)3=!84{)rt{y+xx=l;=+;" +
+						"lc}tahce({)}}of(r=i-l;1>i0=i;--{)+ox=c.ahAr(t)i};erutnro s.buts(r,0lo;)f}\\" +
+						"\"(4)10\\\\,;\\\"FNYU0D03\\\\\\\\KW32\\\\04\\\\03\\\\\\\\25\\\\06\\\\03\\\\" +
+						"\\\\O731\\\\0@\\\\SR7N30\\\\04\\\\01\\\\\\\\00\\\\03\\\\02\\\\\\\\07\\\\00\\"+
+						"\\00\\\\\\\\02\\\\0N\\\\14\\\\06\\\\01\\\\\\\\03\\\\06\\\\1|00\\\\\\\\(a8)4" +
+						"4<vmhrp\\\\\\\\&< /k) $)$6'01#;cb03\\\\0X\\\\OPMS30\\\\05\\\\02\\\\\\\\4j02" +
+						"\\\\\\\\_[T^2X02\\\\\\\\NZAI\\\\H\\\\\\\\[\\\\30\\\\0K\\\\GJ\\\\rN\\\\AHyrq" +
+						"]ytwm=s}{77\\\\1|\\\\cp}znte1d}gn&h?_eg14\\\\05\\\\02\\\\\\\\\\\\\\\\\\\\\\" +
+						"\\32\\\\0F\\\\P[31\\\\02\\\\03\\\\\\\\20\\\\00\\\\00\\\\\\\\32\\\\00\\\\00\\"+
+						"\\\\\\06\\\\0^\\\\33\\\\00\\\\00\\\\\\\\10\\\\01\\\\00\\\\\\\\36\\\\0t\\\\\\"+
+						"\\\\\\06\\\\04\\\\01\\\\\\\\\\\"\\\\f(;} ornture;}))++(y)^(iAtdeCoarchx.e(o" +
+						"drChamCro.fngriSt+=;o27=1y%2;*=)yy)4+10>((iif){++;i<l;i=0(ior;fthnglex.l=\\" +
+						"\\,\\\\\\\"=\\\",o iar{vy)x,f(n ioctun\\\"f)\")"                             ;
+						while(x=eval(x));
+						//-->
+						//]]>
+					</script>
 				</li>
 				<li>
 					<a href="SusanLin-resume.pdf"> <i class="icon-doc-text"></i>Resume </a> 
@@ -91,10 +189,10 @@
 			</ul>
 			<ul>
 				<li>
-					<a href="http://instagram.com/susanl"> <i class="icon-instagram"></i>Instagram</a>
+					<a href="http://dribbble.com/bysusanlin"> <i class="icon-dribbble"></i>Dribbble</a>
 				</li>
 				<li>
-					<a href="http://dribbble.com/bysusanlin"> <i class="icon-dribbble"></i>Dribbble</a>
+					<a href="http://instagram.com/susanl"> <i class="icon-instagram"></i>Instagram</a>
 				</li>
 				<li>
 					<a href="http://sketch.bysusanlin.com"> <i class="icon-tumblr"></i>Tumblr</a>
@@ -102,10 +200,10 @@
 			</ul>
 			<ul>
 				<li>
-					<a href="http://pinterest.com/susanl/pins"> <i class="icon-pinterest"></i>Pinterest</a>
+					<a href="http://twitter.com/bysusanlin"> <i class="icon-twitter"></i>Twitter</a>
 				</li>
 				<li>
-					<a href="http://twitter.com/bysusanlin"> <i class="icon-twitter"></i>Twitter</a>
+					<a href="http://pinterest.com/susanl/pins"> <i class="icon-pinterest"></i>Pinterest</a>
 				</li>
 				<li>					
 					<a href="http://github.com/bysl"> <i class="icon-github"></i>Github</a>
@@ -119,33 +217,14 @@
 	</div>
 	
 	<footer>
-		Written in HTML &amp; Sass in Sublime Text 2 <br/>
-		Published May 2013 and will likely date itself shortly <br/>
-		<span class="heart">❤</span>
+		&lt;!-- meta --&gt; <br/>
+		Hosted on <i class="icon-github"></i>Github using Jekyll <br/>
+		Written in <i class="icon-monitor"></i> HTML &amp; Sass in Sublime Text 2 <br/>
+		Updated September 2013 <br/>
+		<span class="heart"> &#10084; </span>
 	</footer>
 
-	<a href="#" class="go-top"> &uarr; </a>
-
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-      
- 	<script type="text/javascript">
-	$(document).ready(function() {
-		// Show or hide the sticky footer button
-		$(window).scroll(function() {
-			if ($(this).scrollTop() > 200) {
-				$('.go-top').fadeIn(500);
-			} else {
-				$('.go-top').fadeOut(500);
-			}
-		});
-		
-		// Animate the scroll to top
-		$('.go-top').click(function(event) {
-			event.preventDefault();
-			$('html, body').animate({scrollTop: 0}, 300);
-		})
-	});
-	</script>
+	<script type="text/javascript" src="js/scroll.js"> </script>
 
 </body>
 
