--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
 			
 			<iframe width="700" height="525" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
 
-			<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js"></script>
-
+			<div style="width:700px">
+				<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js"></script>
+			</div>
+			
 			<p>
 				 Designers venture into the world of Engineering. I spoke about the value of having a component library and the design process where it touches implementation, seeing your gorgeous mocks through the final 10% to shipping. This 15 minute deck was made for <a href="http://ixdasf.ning.com">IxDA SF<i class="icon-popup"></i></a> on a night of <a href="ixdasf.ning.com/events/designdoing">Design Doing<i class="icon-popup"></i></a>
 				 
