update index.html for temporary wholeness

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 			<li class="typeLowlight"> bysusanlin </li>
 			<li> <a href="#design">design</a> </li>
 			<li> <a href="#talks">talks</a> </li>
-			<li> <a href="#sketches">sketches</a> </li>
-			<li> <a href="#bonus">bonus</a> </li>
+			<!-- <li> <a href="#sketches">sketches</a> </li>
+			<li> <a href="#bonus">bonus</a> </li> -->
 			<li> <a href="#contact">contact</a> </li>
 			<li> <a href="#top" class="go-top">&uarr;</a> </li>
 		</ul>
@@ -94,8 +94,6 @@
 
 		<a name="design"></a>
 		<div class="piece">
-
-			<h6> Design / Trulia </h6> 
 
 			<div class="work">
 				<img src="images/trulia-search-list.png" />
@@ -115,11 +113,11 @@
 		<a name="talks"> </a>
 		<div class="piece">
 
-			<h6> Talks / Speaking the Code </h6>
+			<!-- <h6> Talks / Speaking the Code </h6> -->
 			
 			<iframe width="700" height="525" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
 
-			<div style="width:700px">
+			<div style="width:700px; margin: 0 auto;">
 				<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js"></script>
 			</div>
 			
@@ -220,7 +218,6 @@
 	
 	<footer>
 		&lt;!-- meta --&gt; <br/>
-		Hosted on <i class="icon-github"></i>Github using Jekyll <br/>
 		Written in <i class="icon-monitor"></i> HTML &amp; Sass in Sublime Text 2 <br/>
 		Updated September 2013 <br/>
 		<span class="heart"> &#10084; </span>
