--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
 
 	<div id="subnav" class="">
 		<ul>
-			<li class="typeLowlight"> bysusanlin </li>
+			<li class="typeLowlight"> design by susan </li>
 			<li> <a href="#design">design</a> </li>
 			<li> <a href="#talks">talks</a> </li>
+			<li> <a href="http://sketch.bysusanlin.com">blog<i class="icon-popup"></i></a> </li>
 			<!-- <li> <a href="#sketches">sketches</a> </li>
 			<li> <a href="#bonus">bonus</a> </li> -->
 			<li> <a href="#contact">contact</a> </li>
