consistency, too much 'design' everywhere

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  	
 	<link rel="SHORTCUT ICON" href="favicon.ico">
 
-	<title>bysusanlin &#10084;</title>
+	<title>design by susan</title>
 
 	<meta name="p:domain_verify" content="766c1df40cfdc1ba812d5b2668f45ede"/>
 
@@ -81,7 +81,7 @@
 	<div id="subnav" class="">
 		<ul>
 			<li class="typeLowlight"> design by susan </li>
-			<li> <a href="#design">design</a> </li>
+			<li> <a href="#work">work</a> </li>
 			<li> <a href="#talks">talks</a> </li>
 			<li> <a href="http://sketch.bysusanlin.com">blog<i class="icon-popup"></i></a> </li>
 			<!-- <li> <a href="#sketches">sketches</a> </li>
@@ -93,7 +93,7 @@
 
 	<div id="content">
 
-		<a name="design"></a>
+		<a name="work"></a>
 		<div class="piece">
 
 			<div class="work">
