--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
 		<a name="talks"> </a>
 		<div class="piece dark">
 
-			<h6>Speaking the Code <span class="typeLowlight">//Talks</span></h6>
+			<h6> &lt;!-- talk // the ideal design process --&gt; </h6>
 			
 			<iframe width="700" height="525" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
+
+			<h6> &lt;!-- slides // the ideal design process --&gt; </h6>
 
 			<div style="width:700px; margin: 0 auto;">
 				<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js"></script>
