--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			</div>
 			
 			<p>
-				 Designers venture into the world of Engineering. I spoke about the value of having a component library and the design process where it touches implementation, seeing your gorgeous mocks through the final 10% to shipping. I argued that designers need to undrestand their medium to best communicate with the awesome people building their designs. The end goal isn't to replace developers, but to speak the language. 
+				 Designers venture into the world of Engineering. I spoke about the value of having a component library and the design process where it touches implementation, seeing your gorgeous mocks through the final 10% to shipping. I argued that designers need to understand code to best communicate with the awesome people building who build our designs. The end goal isn't to replace our engineers, but to speak the medium's language. 
 			</p>
 			<p>
 				This 15 minute deck was made for <a href="http://ixdasf.ning.com">IxDA SF<i class="icon-popup"></i></a> on a night of <a href="ixdasf.ning.com/events/designdoing">Design Doing<i class="icon-popup"></i></a> 
@@ -133,7 +133,6 @@
 		</div> <!-- //piece -->
 
 		<section>
-		<a name="contact"></a>
 
 			<img src="images/bysusanlin-portrait.png"/>
 		
@@ -152,6 +151,7 @@
 
 		</section>
 
+		<a name="contact"></a>
 		<section>
 			<ul>
 				<li>
