--- a/index.html
+++ b/index.html
@@ -137,13 +137,17 @@
 			<img src="images/bysusanlin-portrait.png"/>
 		
 			<h2> bysusanlin <span class="h5 typeLowlight"> <i class="icon-location"></i>San Francisco</span> </h2>
-			<h3> Designerd, illustrator, & pretend developer </h3>
+			<h3> Coding Designerd &amp; Sketching Robot </h3>
 
 			<p>
 				Once upon a time, Susan was an oil painter. Then she fell in love with technology and the people who built it during her time at <a href="http://cmu.edu"><i class="icon-graduation-cap"></i>Carnegie Mellon.</a>
 			</p>
 			<p>
-				She's currently Senior Visual UX Designer at <a href="#work">Trulia.</a>
+				She is currently freelancing. <br>
+				<span class="typeLowlight">
+					A freelancer, <br>
+					A battle cry of a hawk make a dove fly and a tear dry 
+				</span>
 			</p>
 			<p>
 				She believes great designs are created from <a href="#talks">those who truly know the medium.</a> Or simply said, to design for internet, you have to internet. 
@@ -217,7 +221,7 @@
 	<footer>
 		&lt;!-- meta --&gt; <br/>
 		Written in HTML &amp; Sass in Sublime Text 2 <br/>
-		Updated September 2013 <br/>
+		Updated January 2014 <br/>
 		<span class="heart"> &#10084; </span>
 	</footer>
 
