--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 			<li class="typeLowlight"> design by susan </li>
 			<li> <a href="#work">work</a> </li>
 			<li> <a href="#talks">talks</a> </li>
-			<li> <a href="#contact">contact</a> </li>
-			<li> <a href="http://sketch.bysusanlin.com">blog<i class="icon-popup"></i></a> </li>
+			<li> <a href="#contact">about</a> </li>
+			<li> <a href="http://sketch.bysusanlin.com"> blog<i class="icon-popup"></i></a> </li>
 			<li> <a href="#top" class="go-top">&uarr;</a> </li>
 		</ul>
 	</div>
@@ -99,8 +99,11 @@
 		<div class="piece">
 
 			<div class="work">
-				<img src="images/trulia-search-list.png" />
-				<img src="images/trulia-search-photo.png" />
+				<a href="images/trulia-search-list.png" title="" data-fluidbox>
+					<img src="images/trulia-search-list.png" title="" alt="" />
+				</a>
+				<img src="images/trulia-search-
+				photo.png" />
 				<img src="images/trulia-oocss-txl.png" />
 			</div>
 
@@ -136,7 +139,7 @@
 
 			<img src="images/bysusanlin-portrait.png"/>
 		
-			<h2> bysusanlin <span class="h5 typeLowlight"> <i class="icon-location"></i>San Francisco</span> </h2>
+			<h2> Susan Lin <span class="h5 typeLowlight"> <i class="icon-location"></i>San Francisco</span> </h2>
 			<h3> Coding Designerd &amp; Sketching Robot </h3>
 
 			<p>
@@ -152,7 +155,7 @@
 				</span> -->
 			</p>
 			<p>
-				She believes great designs are created from <a href="#talks">those who truly know the medium.</a> Or simply said, to design for internet, you have to internet. 
+				She believes great designs are created from <a href="#talks">those who truly know the medium.</a> Or simply said, to design for internet, you have to use the internet. 
 			</p>
 
 		</section>
@@ -228,6 +231,9 @@
 	</footer>
 
 	<script type="text/javascript" src="js/scroll.js"> </script>
+	<script type="text/javascript" src="js/imagesloaded.js"> </script>
+	<script type="text/javascript" src="js/fluidbox.js"> </script>
+
 
 </body>
 
