--- a/index.html
+++ b/index.html
@@ -146,13 +146,7 @@
 				Once upon a time, Susan was an oil painter. Then she fell in love with technology and the people who built it during her time at <a href="http://cmu.edu"><i class="icon-graduation-cap"></i>Carnegie Mellon.</a>
 			</p>
 			<p>
-				She's currently Senior Visual UX Designer at <a href="#work">Trulia.</a>
-			<!--
-				She is currently freelancing. <br>
-				<span class="typeLowlight">
-					A freelancer, <br>
-					A battle cry of a hawk make a dove fly and a tear dry 
-				</span> -->
+				She's currently freelancing and formerly Senior Visual UX Designer at <a href="#work">Trulia.</a>
 			</p>
 			<p>
 				She believes great designs are created from <a href="#talks">those who truly know the medium.</a> Or simply said, to design for internet, you have to use the internet. 
