ampersand to comma
horribly consistent across all 3 platforms now!

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 				<img src="images/bysusanlin-portrait.png">
 
 				<h2> Susan Lin <span class="h5 typeLowlight"> <i class="icon-location"></i>San Francisco</span> </h2>
-				<h3> Coding Designerd &amp; Sketching Robot </h3>
+				<h3> Coding Designerd, Sketching Robot </h3>
 
 				<p>
 					Once upon a time, Susan was a painter.
