for fun, change logo from png to svg as an experiment

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
 
 	<a name="top"></a>
 
-	<header class="animate fadeIn"> <!-- masthead --> </header>
+	<header class="animated fadeIn">
+		<img src="images/bysusanlin-totoro.svg" width="150px">
+	</header>
 
 	<div id="subnav" class="">
 		<ul>
