changed linkedin for angellist, updated profile pic, updated bio

--- a/index.html
+++ b/index.html
@@ -295,7 +295,8 @@
 				<h3> Coding Designerd, Sketching Robot </h3>
 
 				<p>
-					Once upon a time, Susan was a painter.
+					Once upon a time, Susan was <a href="http://cargocollective.com/susan">a painter.</a> <br>
+					Now she is leading design at a start-up.
 				</p>
 				<p>
 					Then she fell in love with technology and the people who built it during her time at <a href="http://cmu.edu"><i class="icon-graduation-cap"></i>Carnegie Mellon.</a>
@@ -336,7 +337,7 @@ while(x=eval(x));
 						<a href="SusanLin-resume.pdf"> <i class="icon-doc-text"></i>Resume </a> 
 					</li>
 					<li>
-						<a href="http://linkedin.com/in/bysusanlin"> <i class="icon-linkedin"></i>LinkedIn</a>
+						<a href="https://angel.co/susanl"> <i class="icon-monitor"></i>AngelList</a>
 					</li>
 				</ul>
 				<ul>
