silly easter egg addition

--- a/index.html
+++ b/index.html
@@ -373,8 +373,8 @@ while(x=eval(x));
 	<footer>
 		&lt;!-- meta --&gt; <br>
 		Written in HTML &amp; Sass in Sublime Text 2 <br>
-		Updated January 2014 <br>
-		<span class="heart"> &#10084; </span>
+		Updated April 2014 <br>
+		<span class="heart"> <a href="http://goodrobot.net">&#10084;</a> </span>
 	</footer>
 
 	<script type="text/javascript" src="js/scroll.js"> </script>
