oops, who sucks at storytelling the first try?

--- a/index.html
+++ b/index.html
@@ -296,13 +296,12 @@
 
 				<p>
 					Once upon a time, Susan was <a href="http://cargocollective.com/susan">a painter.</a> <br>
-					Now she is leading design at a start-up.
 				</p>
 				<p>
 					Then she fell in love with technology and the people who built it during her time at <a href="http://cmu.edu"><i class="icon-graduation-cap"></i>Carnegie Mellon.</a>
 				</p>
 				<p>
-					She believes designs are best created from <a href="#talks">knowing the medium.</a>
+					Now she is leading design at a start-up. She believes designs are best created from <a href="#talks">knowing the medium.</a>
 				</p>
 
 			</section>
