premptive bio, links to other sites

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
 			<li class=""> <a href="#work">work</a> </li>
 			<li class=""> <a href="#talks">talks</a> </li>
 			<li class=""> <a href="#about">about</a> </li>
-			<li> <a href="http://sketch.bysusanlin.com"> blog</a> </li>
+			<li> <a href="http://sketch.bysusanlin.com"><i class="icon-popup"></i>blog</a> </li>
+			<li> <a href="http://cargocollective.com/susan"><i class="icon-popup"></i>art</a> </li>
 			<li> <a href="#top" class="go-top">&uarr;</a> </li>
 		</ul>
 	</div>
@@ -113,6 +114,10 @@
 		<a name="work" id="work"></a>
 
 		<div class="piece">
+
+			<p> 
+				Susan is a Coding Designer and Sketching Robot currently leading design at a start-up. <a href="#about">More &darr;</a> <br><br>
+			</p>
 
 			<div class="work">
 				<div class="work-1">
