--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		<div class="piece">
 
 			<p> 
-				Susan is a Coding Designer and Sketching Robot currently leading design at a start-up. <a href="#about">More &darr;</a> <br><br>
+				Susan is a Coding Designerd and Sketching Robot currently leading design at a start-up. <a href="#about">More &darr;</a> <br><br>
 			</p>
 
 			<div class="work">
@@ -306,7 +306,7 @@
 					Then she fell in love with technology and the people who built it during her time at <a href="http://cmu.edu"><i class="icon-graduation-cap"></i>Carnegie Mellon.</a>
 				</p>
 				<p>
-					Now she is leading design at a start-up. She believes designs are best created from <a href="#talks">knowing the medium.</a>
+					Now she is leading design at <a href="http://beyondpricing.com">a start-up.</a> She believes designs are best created from <a href="#talks">knowing the medium.</a>
 				</p>
 
 			</section>
