--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		<div class="piece">
 
 			<p> 
-				Susan is a Coding Designerd and Sketching Robot with a rather dated portfolio site. Her <a href="http://sketch.bysusanlin.com/">blog</a> is up to date and so is her <a href="http://twitter.com/bysusanlin">twitter!</a> Looking for sketchnotes? <a href=http://sketch.bysusanlin.com/tagged/sketchnotes"> Over here &rarr;</a>  <br><br>
+				Susan is a Coding Designerd and Sketching Robot with a rather dated portfolio site. Her <a href="http://sketch.bysusanlin.com/">blog</a> is up to date and so is her <a href="http://twitter.com/bysusanlin">twitter!</a> Looking for sketchnotes? <a href="http://sketch.bysusanlin.com/tagged/sketchnotes"> Over here &rarr;</a>  <br><br>
 			</p>
 
 			<div class="work">
