lotsa progress here on the layout and about copy

--- a/raincat/index.html
+++ b/raincat/index.html
@@ -49,10 +49,10 @@
 		<img src="images/raincat-facebook.png" border="0" alt="Add us on Facebook!"/>
 	</a>
       <ul id="nav">
-        <li> <a href="#play">Play</a> </li>
-        <li> <a href="#about">About</a> </li>
-        <li> <a href="#team">Team</a> </li>
-        <li> <a href="#gallery">Gallery</a> </li>
+        <li> <a href="#play">Play</a> 
+        <li> <a href="#about">About</a> 
+        <li> <a href="#team">Team</a> 
+        <li> <a href="#gallery">Gallery</a> 
       </ul>
     </div> <!-- end fixed div -->
     
