--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 					Then she fell in love with technology and the people who built it during her time at <a href="http://cmu.edu"><i class="icon-graduation-cap"></i>Carnegie Mellon.</a>
 				</p>
 				<p>
-					Now she is leading design at <a href="http://beyondpricing.com">a start-up.</a> She believes designs are best created from <a href="#talks">knowing the medium.</a>
+					Now she is on a self-proclaimed painting sabbatial. She believes designs are best created from <a href="#talks">knowing the medium.</a>
 				</p>
 
 			</section>
