updating a ton of content so the portal actually makes sense for my current state of things

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 	<link rel="stylesheet" href="css/entypo-ie7-codes.css">
 	<link rel="stylesheet" href="css/entypo-ie7.css">
 	<link rel="stylesheet" href="css/entypo.css">
-	<link rel="stylesheet" href="css/fluidbox.css">
+	<!--
+	<link rel="stylesheet" href="css/fluidbox.css"> 
+-->
 
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js"> </script>
 
@@ -110,7 +112,7 @@
 			<li> <span class="heart">&#10084;</span>
 			<li> <a href="#design"> design </a>
 			<li> <a href="#talks"> talks </a>
-			<li> <a href="#illustration"> illustration </a>
+			<li> <a href="#paintings"> paintings </a>
 			<li> <a href="#sketchnotes"> sketchnotes </a>
 			<li> <a href="#about"> who? </a>
 			<li> <a href="#top" class="go-top">&uarr;</a> 
@@ -127,37 +129,44 @@
 
 			<div class="work">
 				<div class="work-1">
-					<a href="images/trulia-oocss-txl.png" >
-						<img src="images/trulia-oocss-txl.png" title="" alt="" >
-					</a>
+					<img src="images/trulia-oocss-txl.png" title="" alt="" >
+				</div>
+			</div> <!-- //work -->			
+
+			<div class="work">
+				<div class="work-3">
+					<img src="images/trulia-oocss-hologram.png" title="" alt="" >
+				</div>
+
+				<div class="work-3">
+					<img src="images/trulia-search-list.png" title="" alt="" >
+				</div>
+
+				<div class="work-3">
+					<img src="images/trulia-search-photo.png" title="" alt="" >
 				</div>
 			</div> <!-- //work -->
 
 			<p>
-				<b>Trulia, 2012-2014.</b> I started off focusing on UX Design and made my way onto the core team who built and maintained the living styleguide in OOCSS (Object Oriented CSS). With these experiences, I presented a 20 minute talk during an IxDA SF event: Design Doing.
+				I started off focusing on UX Design and made my way onto the core team who built and maintained the living styleguide in OOCSS (Object Oriented CSS) at Trulia. With these experiences, <a href="#talks">I presented a talk</a> to an audience.
+				<br>
+				See my <a href="http://bysusanlin.com/SusanLin-resume.pdf">resume</a> for my full design work history and <a href="http:/dribbble.com/bysusanlin"><i class="icon-dribbble"></i>dribbble</a> for updates.
 			</p>
 
 			<p>
-				I'm taking a break from most design right now. <br>
-				<a class="btn btn-nope">Not accepting new design projects</a>
+					I'm spending the summer painting and taking a break from design. <br>
+					<a class="btn btn-nope">
+					Not available for new design projects
+				</a>
 			</p>
 
 		</div> <!-- //piece -->
-
-		<div class="piece dark">
 		<a name="talks" id="talks"> </a>
 
-			<h6> &lt;!-- talks --&gt; </h6>
+		<div class="piece dark">
 
-			<div class="work">
-				<div class="work-1">
-					<a href="images/bysusanlin-speaking.jpg" >
-						<img src="images/bysusanlin-speaking.jpg" title="" alt="" >
-					</a>
-				</div>
-			</div> <!-- //work -->
+			<h6> &lt;!-- talks --&gt; </h6>
 			
-			<!--
 			<div class="video-container">
 				<iframe width="700" height="525" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
 			</div>
@@ -165,53 +174,91 @@
 			<div id="speaker-deck" style="width:700px; margin: 10px auto 0;">
 				<script async class="speakerdeck-embed" data-id="e894bcf0e2ee01302bc5765f3158560b" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js"></script>
 			</div>
-		-->
 			
 			<p>
 				Designers venture into the world of Engineering. I spoke about the value of having a component library and the design process where it touches implementation, seeing your mocks to shipping. I argued that designers need to understand code to best communicate with the awesome people building who build our designs. The end goal isn't to replace our engineers, but to speak the medium's language. 
 			</p>
 			<p>
-				This 15 minute deck was made for <a href="http://ixdasf.ning.com">IXDASF</a> on a night of <a href="ixdasf.ning.com/events/designdoing">Design Doing.</a> 
+				This deck was made for <a href="http://ixdasf.ning.com">IXDASF</a> on a night of <a href="ixdasf.ning.com/events/designdoing">Design Doing.</a> 
 			</p>
+			<div class="work">
+				<div class="work-1">
+						<img src="images/bysusanlin-speaking.jpg" title="" alt="" >
+				</div> <!-- //work-1 -->
+			</div> <!-- //work -->
+			<br>
 				Other Speaking Experience &mdash;
 				<ol>
-					<li> Thoughtbot
-					<li> Previously, I've spoken privately for a visual design studio class
-					<li> <a href="http://sketch.bysusanlin.com/post/45977847470/speaking-with-the-cmu-bxa-panel">Carnegie Mellon BXA alumni panel.</a>
+					<li> <a href="http://thoughtbot.com/taco-tuesdays"> Thoughtbot Prodcut Design series </a>
+					<li> Academy of Arts visual design studio class
+					<li> <a href="http://sketch.bysusanlin.com/post/45977847470/speaking-with-the-cmu-bxa-panel">Carnegie Mellon BXA alumni panel</a>
 				</ol>
-			<h2> More to come! </h2>
+			<br>
 			<p>
-				I'm interested in giving more talks about style guides, CSS, or how illustration has informed my design process. <br>
-				<a href="" class="btn">Invite me to speak</a>
+				I'm interested in giving more talks about style guides, CSS, or how paintings has informed my design process. <br>
+				<a href="mailto:bysusanlin@gmail.com?subject=Speaking Inquiry" class="btn">Invite me to speak</a>
 			</p>
 
 		</div> <!-- //piece -->
 
-		<a name="illustration"></a>
+		<a name="paintings"></a>
 		<div class="piece">
-			<h6> &lt;!-- illustration --&gt; </h6>
+			<h6> &lt;!-- paintings --&gt; </h6>
+
+			<div class="work">
+				<div class="work-1">
+					<img src="images/painting-lessons.jpg" title="" alt="" >
+				</div> <!-- //work-1 -->
+			</div> <!-- //work -->
+
+			<div class="work">
+				<div class="work-1">
+					<img src="images/painting-zoom.jpg" title="" alt="" >
+				</div> <!-- //work-1 -->
+			</div> <!-- //work -->
+			
+			<div class="work">
+				<div class="work-1">
+					<img src="images/painting-dreams.jpg" title="" alt="" >
+				</div> <!-- //work-1 -->
+			</div> <!-- //work -->
 
 			<p>
-				Yes, I can still use Photoshop and Illustrator even though I code!
-				Currently accepting illustration projects for the summer: <br>
-				<a href="" class="btn">Hire me to paint</a>
+				These are a few recent snapshots from the paintings I'm doing this summer. Check out my full <a href="http://cargocollective.com/susan">Art Portfolio.</a> Currently accepting paintings projects for the summer. <br>
+				<a href="mailto:bysusanlin@gmail.com?subject=Illustration Project Inquiry" class="btn">Hire me to paint</a>
 			</p>
 			<p>
-				Want to see more? Follow my blog, instagram, or twitter for updates on my work.
+				Stay updated with my work:
+				<a href=""><i class="icon-tumblr"></i>Blog</a> / <a href=""><i class="icon-instagram"></i>Instagram</a> / <a href=""><i class="icon-twitter"></i>Twitter</a>
 			</p>
 
 		</div> <!-- //piece -->		
 
 		<a name="sketchnotes"></a>
-		<div class="piece mint">
+		<div class="piece beige">
 			<h6> &lt;!-- sketchnotes --&gt; </h6>
 
+			<div class="work">
+				
+				<div class="work-1">
+						<img src="images/sketchnote-personalization.jpg" title="" alt="" >
+				</div> <!-- //work-1 -->			
+				<div class="work-1">
+						<img src="images/sketchnote-styleguide.jpg" title="" alt="" >
+				</div> <!-- //work-1 -->			
+				<div class="work-1">
+						<img src="images/sketchnote-parallax.jpg" title="" alt="" >
+				</div> <!-- //work-1 -->			
+
+			</div> <!-- //work -->
+
 			<p>
-					There are so many nights out and conferences out there! I'm open to see if we can collaborate formally on visual notes for your event. <br>
-					<a href="" class="btn">Have me sketchnote your event</a>
+					I started sketchnoting as a means to engage. It blossomed into a powerful vehicle to meet fantastic folks while giving back.
+					My <a href="http://sketchnotearmy.com/blog/2013/4/2/interaction-2013-sketchnotes.html">Interaction '13 sketchnotes</a> and <a href="http://sketchnotearmy.com/blog/2014/6/25/cssconf-sketchnote-susan-lin.html">CSSConf sketchnotes</a> are featured on The Sketchnote Army. I'm open to collaborate formally on visual notes for your event. <br>
+					<a href="mailto:bysusanlin@gmail.com?subject=Sketchnote Inquiry" class="btn">Have me sketchnote your event</a>
 			</p>
 			<p>
-				Want to see more? The sketchnote section of my blog has the most thorough archive.
+				Stay udpated! <a href="http://sketch.bysusanlin.com/tagged/sketchnotes"><i class="icon-tumblr"></i>Sketchnotes on my blog</a>
 			</p>
 
 		</div> <!-- //piece -->
@@ -229,11 +276,11 @@
 				</p>
 
 				<p>
-					Susan also draws. You may know her for <a href="#sketchnotes">sketchnoting at events</a> or <a href="#illustration">watercolor paintings.</a>
+					Susan also draws. You may know her for <a href="#sketchnotes">sketchnoting at events</a> or <a href="#paintings">watercolor paintings.</a>
 					Miyazaki inspires <a href="http://instagram.com/p/oz6ztIy4_J/">her</a> <a href="http://instagram.com/p/mt-7mSy45P/">like</a> <a href="http://instagram.com/p/m9hGpyy4xD/">no</a> <a href="http://instagram.com/p/o9VYGfy4yA/">other.</a> 
 				</p>
 				<p>
-					Her hair is currently green. 
+					Her hair is currently teal blue green. 
 				</p>
 
 			</section>
@@ -310,13 +357,14 @@ while(x=eval(x));
 	<footer>
 		&lt;!-- meta --&gt; <br>
 		Written in HTML &amp; Sass in Sublime Text <br>
-		Updated June 2014 <br>
-		<span class="heart"> <a href="http://goodrobot.net">&#10084;</a> </span>
+		Updated July 2014 <br>
+		<span class="heart"> <a href="http://goodrobot.net">&#10084;</a> </span> <br>
+		<img src="images/earthbound.gif" width="42px"> 
 	</footer>
 
 	<script type="text/javascript" src="js/scroll.js"> </script>
-	<script type="text/javascript" src="js/imagesloaded.js"> </script>
-	<script type="text/javascript" src="js/fluidbox.js"> </script>
+	<!--<script type="text/javascript" src="js/imagesloaded.js"> </script>
+	 <script type="text/javascript" src="js/fluidbox.js"> </script> -->
 	<script type="text/javascript" src="js/active.js"> </script>
 
 </body>
