--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 			<p>
 				I started off focusing on UX Design and made my way onto the core team who built and maintained the living styleguide in OOCSS (Object Oriented CSS) at Trulia. With these experiences, <a href="#talks">I presented a talk</a> to an audience.
 				<br>
-				See my <a href="http://bysusanlin.com/SusanLin-resume.pdf">resume</a> for my full design work history and <a href="http:/dribbble.com/bysusanlin"><i class="icon-dribbble"></i>dribbble</a> for updates.
+				See my <a href="http://bysusanlin.com/SusanLin-resume.pdf">resume</a> for my full work history and <a href="http://dribbble.com/bysusanlin"><i class="icon-dribbble"></i>dribbble</a> for updates.
 			</p>
 
 			<p>
