--- a/index.html
+++ b/index.html
@@ -224,12 +224,14 @@
 			</div> <!-- //work -->
 
 			<p>
-				These are a few recent snapshots from the paintings I'm doing this summer. Check out my full <a href="http://cargocollective.com/susan">Art Portfolio.</a> Currently accepting paintings projects for the summer. <br>
+				These are a few recent snapshots from the paintings I'm doing this summer. Check out my full <a href="http://cargocollective.com/susan">Art Portfolio</a> and my latest <a href="https://medium.com/@ienjoy/designing-while-shipping-1ed17f9200ca">watercolor keynote project</a> with designer Jon Bell. Currently accepting paintings projects for the summer. <br>
 				<a href="mailto:bysusanlin@gmail.com?subject=Illustration Project Inquiry" class="btn">Hire me to paint</a>
 			</p>
 			<p>
 				Stay updated with my work:
-				<a href=""><i class="icon-tumblr"></i>Blog</a> / <a href=""><i class="icon-instagram"></i>Instagram</a> / <a href=""><i class="icon-twitter"></i>Twitter</a>
+				<a href="http://sketch.bysusanlin.com"><i class="icon-tumblr"></i>Blog</a> / 
+				<a href="http://instagram.com/susanl"><i class="icon-instagram"></i>Instagram</a> / 
+				<a href="http://twitter.com/bysusanlin/media"><i class="icon-twitter"></i>Twitter</a>
 			</p>
 
 		</div> <!-- //piece -->		
