make designs bigger, added art and blog back to nav...

--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
 			<li> <span class="heart">&#10084;</span>
 			<li> <a href="#design"> design </a>
 			<li> <a href="#talks"> talks </a>
-			<li> <a href="#paintings"> paintings </a>
-			<li> <a href="#sketchnotes"> sketchnotes </a>
+			<li> <a href="#paintings"> more </a>
+			<li> <a href="http://cargocollective.com/susan"> art<i class="icon-popup"></i> </a>
+			<li> <a href="http://sketch.bysusanlin.com"> blog<i class="icon-popup"></i> </a>
 			<li> <a href="#about"> who? </a>
 			<li> <a href="#top" class="go-top">&uarr;</a> 
 		</ul>
@@ -131,18 +132,13 @@
 				<div class="work-1">
 					<img src="images/trulia-oocss-txl.png" title="" alt="" >
 				</div>
-			</div> <!-- //work -->			
-
-			<div class="work">
-				<div class="work-3">
+				<div class="work-1">
 					<img src="images/trulia-oocss-hologram.png" title="" alt="" >
 				</div>
-
-				<div class="work-3">
+				<div class="work-1">
 					<img src="images/trulia-search-list.png" title="" alt="" >
 				</div>
-
-				<div class="work-3">
+				<div class="work-1">
 					<img src="images/trulia-search-photo.png" title="" alt="" >
 				</div>
 			</div> <!-- //work -->
