I linked the work now

--- a/index.html
+++ b/index.html
@@ -130,17 +130,21 @@
 
 			<div class="work">
 				<div class="work-1">
+					<a href="http://trulia.github.io/hologram/"> <img src="images/trulia-oocss-hologram.png" title="" alt="" > </a>
+				</div>
+
+				<div class="work-1">
+					<a href="http://www.trulia.com/for_sale/San_Francisco,CA"> <img src="images/trulia-search-list.png" title="" alt="" > </a>
+				</div>
+
+				<div class="work-1">
+					<a href="http://www.trulia.com/for_sale/San_Francisco,CA/photo_v"> <img src="images/trulia-search-photo.png" title="" alt="" > </a>
+				</div>
+				
+				<div class="work-1">
 					<img src="images/trulia-oocss-txl.png" title="" alt="" >
 				</div>
-				<div class="work-1">
-					<img src="images/trulia-oocss-hologram.png" title="" alt="" >
-				</div>
-				<div class="work-1">
-					<img src="images/trulia-search-list.png" title="" alt="" >
-				</div>
-				<div class="work-1">
-					<img src="images/trulia-search-photo.png" title="" alt="" >
-				</div>
+
 			</div> <!-- //work -->
 
 			<p>
